Fix spacing

--- a/src/components/CV/ContactSection.module.scss
+++ b/src/components/CV/ContactSection.module.scss
@@ -7,7 +7,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 2.4rem;
+        gap: 1.6rem;
     }
 
     &__contactLink {
