--- a/src/components/CV/ExperienceSection.module.scss
+++ b/src/components/CV/ExperienceSection.module.scss
@@ -37,7 +37,7 @@
     &__timelineDot {
         position: absolute;
         left: -3.9rem;
-        top: 0.8rem;
+        top: 0.4rem;
         width: 1.6rem;
         height: 1.6rem;
         border-radius: 50%;
@@ -65,8 +65,6 @@
         gap: 0.8rem;
 
         @media (min-width: 601px) {
-            flex-direction: row;
-            justify-content: space-between;
             align-items: baseline;
         }
     }
@@ -108,7 +106,7 @@
 
     &__itemCompany {
         font-size: 1.6rem;
-        margin: 0 0 0.8rem 0;
+        margin: 0 0 0.4rem 0;
         font-weight: 600;
         font-family: 'JetBrains Mono', monospace;
     }
