--- a/src/components/CV/Section.module.scss
+++ b/src/components/CV/Section.module.scss
@@ -32,7 +32,7 @@
 
     &__title {
         font-size: 3.6rem;
-        margin: 0 0 2.4rem 0;
+        margin: 0 0 1.6rem 0;
         font-weight: 700;
         position: relative;
         padding-bottom: 0;
@@ -61,7 +61,7 @@
 
         @media (min-width: 901px) {
             font-size: 1.8rem;
-            line-height: 1.7;
+            line-height: 1.4;
         }
     }
 }
